# forge

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_growler.sh  cmake_lightning.sh  cmake_raptor.sh  forge.sln
data/ChessMicrobase/: 10.pgn  ChessMicrobase.url
data/Performance/movegen/: 05_07_2021.ods
data/PgnChessBook/: PgnChessBook.url  WorldChamp_1986_to_2018.pgn  botvinnik_996.pgn  capablanca_590.pgn  fischer_864.pgn  karpov_1049.pgn  kasparov_1798.pgn  spassky_1805.pgn  tal_2499.pgn
forge/: AI.txt  ApplePieHeuristic.cpp  ApplePieHeuristic.h  ApplePieWeights.cpp  ApplePieWeights.h  AttackChecker.cpp  AttackChecker.h  AttackerPair.cpp  AttackerPair.h  Attackers.cpp  Attackers.h  AttackersDefinitions.h  BenchmarkTesting.txt  Benchmarks.txt  BitBoard.cpp  BitBoard.h  BitBoardDefinitions.h  Board.cpp  Board.h  BoardDefinitions.h  BoardSquare.cpp  BoardSquare.h  Bugs.txt  CMakeLists.txt  CSVParser.cpp  CSVParser.h  ChessMatch.cpp  ChessMatch.h  Classes.txt  Clock.cpp  Clock.h  Color.h  ControllerBase.cpp  ControllerBase.h  Controllers.hpp  DataMonitor.cpp  DataMonitor.h  DataSet.cpp  DataSet.h  Database.txt  (+156 more)
forge/controllers/: ControllerBase.h  Controllers.hpp  KeyboardController.cpp  KeyboardController.h  MCTS_Base.h  MCTS_Concurrent.cpp  MCTS_Concurrent.h  MCTS_ProducerConsumer.cpp  MCTS_ProducerConsumer.h  MCTS_Sequential.cpp  MCTS_Sequential.h  MCTS_Solver.cpp  MCTS_Solver.h  MCTS_Solver_MT.cpp  MCTS_Solver_MT.h  MinimaxSolver.cpp  MinimaxSolver.h  RandomSolver.cpp  RandomSolver.h  ReplayController.cpp  ReplayController.h  SolverBase.cpp  SolverBase.h  Solvers.hpp
forge/core/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  BoardSquare.cpp  BoardSquare.h  Color.cpp  Color.h  Direction.cpp  Direction.h  IntBoard.h  Move.cpp  Move.h  MoveCounter.cpp  MovePositionPair.cpp  MovePositionPair.h  Movers.cpp  Movers.h  Piece.cpp  Piece.h  Position.cpp  Position.h  PositionDefinitions.h
forge/drivers/: dataset_helpers.cpp  dataset_helpers.h  play.cpp  play.h  train.cpp  train.h
forge/feature_extractor/: AttackChecker.cpp  AttackChecker.h  Attackers.h  FeatureExtractor.cpp  FeatureExtractor.h  KingAttacker.h  KingAttackers.h  KingAttackersDefinitions.h  Pin.h  PinDefinitions.h  Threats.cpp  Threats.h
forge/game/: ChessMatch.cpp  ChessMatch.h  GameHistory.cpp  GameHistory.h  GameState.cpp  GameState.h  UciMatch.cpp  UciMatch.h
forge/heuristic/: ApplePie.cpp  ApplePie.h  ApplePieWeights.cpp  ApplePieWeights.h  Base.cpp  Base.h  FeatureExtractor.cpp  FeatureExtractor.h  Heuristics.hpp  Material.cpp  Material.h  MaterialWeights.h  NeuralNetwork.cpp  NeuralNetwork.h  Random.cpp  Random.h  RandomSlow.cpp  RandomSlow.h  Rollout.cpp  Rollout.h
forge/heuristics/: ApplePieHeuristic.cpp  ApplePieHeuristic.h  ApplePieWeights.cpp  ApplePieWeights.h  FeatureExtractor.h  HeuristicBase.h  Heuristics.hpp  IWeightsArchive.h  NeuralNetworkHeuristic.cpp  NeuralNetworkHeuristic.h  OWeightsArchive.cpp  OWeightsArchive.h  PositionTable.h  RandomHeuristic.cpp  RandomHeuristic.h  RandomSlow.cpp  RandomSlow.h  Rollout.cpp  Rollout.h  WeightsArchive.cpp  WeightsArchive.h  WeightsBase.h
forge/ml/: CSVDataSet.cpp  CSVDataSet.h  CSVParser.cpp  CSVParser.h  CheckpointManager.cpp  CheckpointManager.h  DataSet.cpp  DataSet.h  DatasetGenerator.h  IntBoard.h  Net.cpp  Net.h  Network.h  Optimizer.cpp  Optimizer.h  PosEvalPair.h  PositionEvalPair.h  StockfishDataset.cpp  StockfishDataset.h  TensorPair.cpp  TensorPair.h  Trainer.cpp  Trainer.h  TrainingHistory.cpp  TrainingHistory.h
forge/movegen/: MoveGenerator.cpp  MoveGenerator.h  MoveGenerator2.cpp  MoveList.cpp  MoveList.h
forge/notes/: BenchmarkTesting.txt  Benchmarks.txt  Bugs.txt  Classes.txt  Database.txt  Features.txt  GameStates.txt  HighLevelDesign.txt  Ideas.txt  MCTS.txt  ML.txt  MoveGeneratorQuintessential.txt  MoveGeneratorQuintessential2.txt  Multi_threading.txt  NN.txt  NameSpaces.txt  NodeTree.txt  Optimizations.txt  ProblemPositions.txt  TODO.txt  UCI.txt  UCI_DefinitionNotes.txt  UCI_UML.txt  Versions.txt  View.txt
forge/perft/: PerformanceLogger.h  PerformanceTester.cpp  PerformanceTester.h  benchmark_mcts_phases.xlsx  benchmark_mcts_phases_without_search.xlsx
forge/search/: ExitCondition.cpp  ExitCondition.h  MCTS_Node.cpp  MCTS_Node.h  MCTS_Node1.cpp  MCTS_Node1.h  MiniMaxNode.cpp  MiniMaxNode.h  Node.cpp  Node.h  SearchMonitor.cpp  SearchMonitor.h  SearchMonitorAtomic.h  SearchMonitorTemplate.h  UCB.h
forge/source/: globals.cpp  globals.h  globals_torch.cpp  globals_torch.h  main.cpp
forge/test/: Benchmark.cpp  Benchmark.h  Test.cpp  Test.h  TestFeatureExtractor.cpp  TestML.cpp  TestML.h  TestMoveGen.cpp  TestMoveGen.h  TestUci.cpp  TestUci.h  heuristics.cpp  heuristics.h  mcts.cpp  mcts.h  positions.cpp  positions.h  tree.cpp  tree.h
forge/time/: Clock.cpp  StopWatch.cpp  Timer.cpp  Timer.h
forge/uci/: UciCurrLine.h  UciGui.cpp  UciGui.h  UciInfo.cpp  UciInfo.h  UciOptions.h  UciScore.h  UciSearchCommands.h
forge/util/: composite.h  demangle.h  formatted_int.h
forge/views/: TextView.cpp  TextView.h  ViewBase.cpp  ViewBase.h
forgelib/: CMakeLists.txt
forgelib/forge/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  BoardSquare.cpp  Color.cpp  Direction.cpp  Direction.h  FiftyMoveRule.cpp  FiftyMoveRule.h  IntBoard.cpp  IntBoard.h  Move.cpp  Move.h  MoveCounter.h  MoveGenerator2.h  MoveList.cpp  MoveList.h  MovePositionPair.cpp  MovePositionPair.h  Piece.cpp  Piece.h  Position.cpp  Position.h
forgelib/forge/feature_extractor/: AttackChecker.h  Attackers.h  KingAttacker.h  KingAttackers.cpp  Pin.h  Threats.h
